<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/layer_click"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MovieDetailsActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundBlack"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="8dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/root_film_shape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/shape_film_list"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/movie_cover"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent"
        android:layout_width="166dp"
        android:layout_height="248dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="2dp"
        android:src="@drawable/avengers_cover"
        app:layout_constraintEnd_toEndOf="@id/root_film_shape"
        app:layout_constraintStart_toStartOf="@id/root_film_shape"
        app:layout_constraintTop_toTopOf="@id/root_film_shape" />

    <View
        android:id="@+id/gradient"
        android:layout_width="166dp"
        android:layout_height="213dp"
        android:background="@drawable/gradient_movie_list"
        android:layout_marginBottom="35dp"
        app:layout_constraintBottom_toBottomOf="@id/movie_cover"
        app:layout_constraintEnd_toEndOf="@id/movie_cover"
        app:layout_constraintStart_toStartOf="@+id/movie_cover" />

    <View
        android:id="@+id/gradient_bottom"
        android:layout_width="166dp"
        android:layout_height="36dp"
        android:layout_marginBottom="-1dp"
        android:background="@drawable/gradient_bottom_movie_list"
        app:layout_constraintBottom_toBottomOf="@id/movie_cover"
        app:layout_constraintEnd_toEndOf="@id/movie_cover"
        app:layout_constraintStart_toStartOf="@+id/movie_cover" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/mini_shape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/root_film_shape"
        app:layout_constraintStart_toStartOf="@id/root_film_shape"
        android:layout_marginStart="7dp"
        android:layout_marginTop="9dp"
        android:src="@drawable/shape_mini_list"/>

    <TextView
        android:id="@+id/age_restriction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_13"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_black"
        app:layout_constraintTop_toTopOf="@id/mini_shape"
        app:layout_constraintStart_toStartOf="@id/mini_shape"
        app:layout_constraintBottom_toBottomOf="@id/mini_shape"
        app:layout_constraintEnd_toEndOf="@id/mini_shape"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/root_film_shape"
        app:layout_constraintEnd_toEndOf="@id/root_film_shape"
        android:layout_marginEnd="7dp"
        android:layout_marginTop="13dp"
        android:src="@drawable/ic_like"/>

    <TextView
        android:id="@+id/genres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_adventure_drama"
        android:textColor="#FF3466"
        android:textSize="8dp"
        app:layout_constraintTop_toTopOf="@id/root_film_shape"
        android:layout_marginTop="214dp"
        app:layout_constraintStart_toStartOf="@id/root_film_shape"
        android:layout_marginStart="7dp"/>

    <ImageView
        android:id="@+id/starOne"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/redstaricon"
        android:src="@drawable/ic_stargray"
        app:layout_constraintEnd_toStartOf="@+id/starTwo"
        app:layout_constraintStart_toStartOf="@id/genres"
        app:layout_constraintTop_toBottomOf="@+id/genres" />

    <ImageView
        android:id="@+id/starTwo"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/redstaricon"
        android:src="@drawable/ic_stargray"
        app:layout_constraintEnd_toStartOf="@+id/starThree"
        app:layout_constraintStart_toEndOf="@id/starOne"
        app:layout_constraintTop_toBottomOf="@+id/genres" />

    <ImageView
        android:id="@+id/starThree"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/redstaricon"
        android:src="@drawable/ic_stargray"
        app:layout_constraintEnd_toStartOf="@+id/starFour"
        app:layout_constraintStart_toEndOf="@id/starTwo"
        app:layout_constraintTop_toBottomOf="@+id/genres" />

    <ImageView
        android:id="@+id/starFour"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/redstaricon"
        android:src="@drawable/ic_stargray"
        app:layout_constraintEnd_toStartOf="@+id/starFive"
        app:layout_constraintStart_toEndOf="@id/starThree"
        app:layout_constraintTop_toBottomOf="@+id/genres" />

    <ImageView
        android:id="@+id/starFive"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/graystaricon"
        android:src="@drawable/ic_stargray"
        app:layout_constraintStart_toEndOf="@id/starFour"
        app:layout_constraintTop_toBottomOf="@+id/genres" />

    <TextView
        android:id="@+id/reviews_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="2.2dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/reviews_number"
        android:textColor="@color/GrayBack"
        android:textSize="8sp"
        app:layout_constraintStart_toEndOf="@id/starFive"
        app:layout_constraintTop_toBottomOf="@id/genres" />

    <TextView
        android:id="@+id/movie_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginStart="8dp"
        android:textSize="14sp"
        android:text="@string/avengers_end_game"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_black"
        app:layout_constraintTop_toBottomOf="@id/movie_cover"
        app:layout_constraintStart_toStartOf="@id/root_film_shape" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/movie_header"
        app:layout_constraintStart_toStartOf="@id/root_film_shape"
        android:layout_marginStart="8dp"
        android:textColor="#565665"
        android:textSize="8sp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/_137_min"/>

</androidx.constraintlayout.widget.ConstraintLayout>